--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Free HTML CSS Template
                     <line x1="33" y1="50" x2="45" y2="50" stroke="#ff00ff" stroke-width="1" opacity="0.6"/>
                     <line x1="55" y1="50" x2="67" y2="50" stroke="#ff00ff" stroke-width="1" opacity="0.6"/>
                 </svg>
-                <span class="logo-text">NEURAL</span>
+                <span class="logo-text">INFO TECH</span>
             </a>
             
             <div class="mobile-menu-toggle" id="mobile-toggle">
@@ -69,7 +69,7 @@ Free HTML CSS Template
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1 class="glitch" data-text="NEURAL NETWORK">NEURAL NETWORK</h1>
+            <h1 class="glitch" data-text="NEURAL NETWORK">INTECH</h1>
             <p class="subtitle">Web Developer & Digital Architect</p>
         </div>
         <a href="#about" class="scroll-btn">
@@ -240,7 +240,7 @@ Free HTML CSS Template
         </div>
         
         <div class="footer-bottom">
-            <p>&copy; 2048 Neural Network Portfolio. All rights reserved. Provided by <a href="https://www.tooplate.com" rel="nofollow noopener">Tooplate</a></p>
+            <p>&copy; 2048 Neural Network Portfolio. All rights reserved. Provided by <a href="https://www.tooplate.com" rel="nofollow noopener">Collins Gachau</a></p>
         </div>
     </footer>
 <script src="tooplate-neural-scripts.js"></script>
